--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,7 @@
     "@dnd-kit/sortable": "^9.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^2.3.0",
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,6 +28,7 @@
     "crypto-js": "^4.2.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "dart-sass": "^1.25.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -47,11 +48,11 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
@@ -59,9 +60,9 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "resolve": "^1.20.0",
-    "resolve-url-loader": "^4.0.0",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.0",
-    "sass-loader": "^16.0.3",
+    "sass-loader": "^16.0.4",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
